resources/experiment/0814-specgen/081402/log-GetLowCaseLoop_M3-2025_08_15_02_41_33.txt
public class GetLowCaseLoop {
    /*@ requires true;
      @ ensures (c < 'A' || c > 'Z') ==> \result == 0;
      @ ensures ('A' <= c && c <= 'Z') ==> \result == (char)(c - 'A' + 'a');
      @*/
    public static char getLowCase(char c) {
        if(c < 'A' || c > 'Z') {
            return 0;
        }
        char t = 'a';
        /*@ maintaining 'a' <= t && t <= 'z' + 1;
          @ maintaining (\forall char k; 'a' <= k && k < t; k != (char)(c - 'A' + 'a'));
          @ decreases 'z' - t + 1;
          @*/
        while(t <= 'z' && t != c - 'A' + 'a') {
            t++;
        }
        return t;
    }
}
==============================
/root/specgen/SpecGen/project/081402-specgen/tmp/GetLowCaseLoop_M3.java:1: error: class GetLowCaseLoop is public, should be declared in a file named GetLowCaseLoop.java
public class GetLowCaseLoop {
       ^
1 error

==============================
public class GetLowCaseLoop {
    /*@ requires true;
      @ ensures (c < 'A' || c > 'Z') ==> \result == 0;
      @ ensures ('A' <= c && c <= 'Z') ==> \result == (char)(c - 'A' + 'a');
      @*/
    public static char getLowCase(char c) {
        if(c < 'A' || c > 'Z') {
            return 0;
        }
        char t = 'a';
        /*@ maintaining 'a' <= t && t <= 'z' + 1;
          @ maintaining (\forall char k; 'a' <= k && k < t; k != (char)(c - 'A' + 'a'));
          @ decreases 'z' - t + 1;
          @*/
        while(t <= 'z' && t != c - 'A' + 'a') {
            t++;
        }
        return t;
    }
}
==============================
/root/specgen/SpecGen/project/081402-specgen/tmp/GetLowCaseLoop_M3.java:1: error: class GetLowCaseLoop is public, should be declared in a file named GetLowCaseLoop.java
public class GetLowCaseLoop {
       ^
1 error

==============================
public class GetLowCaseLoop {
    /*@ requires true;
      @ ensures (c < 'A' || c > 'Z') ==> \result == 0;
      @ ensures ('A' <= c && c <= 'Z') ==> \result == (char)(c - 'A' + 'a');
      @*/
    public static char getLowCase(char c) {
        if(c < 'A' || c > 'Z') {
            return 0;
        }
        char t = 'a';
        /*@ maintaining 'a' <= t && t <= 'z' + 1;
          @ maintaining (\forall char k; 'a' <= k && k < t; k != (char)(c - 'A' + 'a'));
          @ decreases 'z' - t + 1;
          @*/
        while(t <= 'z' && t != c - 'A' + 'a') {
            t++;
        }
        return t;
    }
}
==============================
/root/specgen/SpecGen/project/081402-specgen/tmp/GetLowCaseLoop_M3.java:1: error: class GetLowCaseLoop is public, should be declared in a file named GetLowCaseLoop.java
public class GetLowCaseLoop {
       ^
1 error

==============================
public class GetLowCaseLoop {
    /*@ requires true;
      @ ensures (c < 'A' || c > 'Z') ==> \result == 0;
      @ ensures ('A' <= c && c <= 'Z') ==> \result == (char)(c - 'A' + 'a');
      @*/
    public static char getLowCase(char c) {
        if(c < 'A' || c > 'Z') {
            return 0;
        }
        char t = 'a';
        /*@ maintaining 'a' <= t && t <= 'z' + 1;
          @ maintaining (\forall char k; 'a' <= k && k < t; k != (char)(c - 'A' + 'a'));
          @ decreases 'z' - t + 1;
          @*/
        while(t <= 'z' && t != c - 'A' + 'a') {
            t++;
        }
        return t;
    }
}
==============================
/root/specgen/SpecGen/project/081402-specgen/tmp/GetLowCaseLoop_M3.java:1: error: class GetLowCaseLoop is public, should be declared in a file named GetLowCaseLoop.java
public class GetLowCaseLoop {
       ^
1 error

==============================
class GetLowCaseLoop {
    /*@ requires true;
      @ ensures (c < 'A' || c > 'Z') ==> \result == 0;
      @ ensures ('A' <= c && c <= 'Z') ==> \result == (char)(c - 'A' + 'a');
      @*/
    public static char getLowCase(char c) {
        if(c < 'A' || c > 'Z') {
            return 0;
        }
        char t = 'a';
        /*@ maintaining 'a' <= t && t <= 'z' + 1;
          @ maintaining (\forall char k; 'a' <= k && k < t; k != (char)(c - 'A' + 'a'));
          @ decreases 'z' - t + 1;
          @*/
        while(t <= 'z' && t != c - 'A' + 'a') {
            t++;
        }
        return t;
    }
}
==============================

==============================
